# srgl

./: Cargo.toml
src/gamedev/: Cargo.toml
src/gamedev/src/: main.rs
src/libsrgl/: Cargo.toml
src/libsrgl-event/: Cargo.toml
src/libsrgl-input/: Cargo.toml
src/libsrgl-output/: Cargo.toml
src/libsrgl-reaction/: Cargo.toml
src/libsrgl/src/: lib.rs  state.rs  world.rs
src/libsrgl/src/state/: engine.rs  router.rs
