[package]
name = "gamedev"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.srgl]
version = "*"
path = "../libsrgl"
features = ["default-backend"]

[dependencies.srgl-input]
version = "*"
path = "../libsrgl-input"

[dependencies.srgl-output]
version = "*"
path = "../libsrgl-output"
