[package]
name = "srgl"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsrgl-reaction = { version = "*", path = "../libsrgl-reaction", optional = true }
libsrgl-event = { version = "*", path = "../libsrgl-event", optional = true }

[features]
default-backend = ["libsrgl-reaction", "libsrgl-event"]
