[package]
name = "srgl"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srgl-input = { version = "*", path = "../libsrgl-input", optional = true }
srgl-output = { version = "*", path = "../libsrgl-output", optional = true }

[features]
default-backend = ["srgl-input", "srgl-output"]
